# server/src/app.module.ts
@@ -8,6 +8,7 @@ import { AttendanceModule } from './modules/attendance/attendance.module';
 import { UsersModule } from './modules/users/users.module';
 import { ProfileModule } from './modules/profile/profile.module';
 import { UploadsModule } from './modules/uploads/uploads.module';
+import { ArchivesModule } from './modules/archives/archives.module';
 
 @Module({
   imports: [
@@ -20,6 +21,7 @@ import { UploadsModule } from './modules/uploads/uploads.module';
     UsersModule,
     ProfileModule,
     UploadsModule,
+    ArchivesModule,
   ],
 })
 export class AppModule {}
